--- a/package.json
+++ b/package.json
@@ -1,20 +1,25 @@
 {
-	"name": "luci-theme-orion",
-	"description": "Modern OpenWrt LuCI theme built with Vite and TailwindCSS",
-	"type": "module",
-	"scripts": {
-		"dev": "vite",
-		"build": "node scripts/clean.js && vite build",
-		"clean": "node scripts/clean.js"
-	},
-	"devDependencies": {
-		"@tailwindcss/vite": "^4.1.11",
-		"@types/node": "^24.10.0",
-		"prettier": "^3.6.2",
-		"prettier-plugin-tailwindcss": "^0.7.1",
-		"tailwind-scrollbar": "^4.0.2",
-		"tailwindcss": "^4.1.11",
-		"terser": "^5.43.1",
-		"vite": "^7.1.1"
-	}
+  "name": "luci-theme-orion",
+  "description": "Modern OpenWrt LuCI theme built with Vite and TailwindCSS",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "node scripts/clean.js && vite build",
+    "clean": "node scripts/clean.js"
+  },
+  "devDependencies": {
+    "@tailwindcss/vite": "^4.1.11",
+    "@types/node": "^24.10.0",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.7.1",
+    "tailwind-scrollbar": "^4.0.2",
+    "tailwindcss": "^4.1.11",
+    "terser": "^5.43.1",
+    "vite": "^7.1.1",
+    "@types/bun": "latest"
+  },
+  "private": true,
+  "peerDependencies": {
+    "typescript": "^5"
+  }
 }
